# turbo

./: .env.example  .gitignore  .mcp.json  BRAIN_FIXES_REPORT.md  CLAUDE.md  CLAUDE_DESKTOP_COWORK.md  CLAUDE_DESKTOP_CUSTOM_INSTRUCTIONS.txt  CLAUDE_MULTI_AGENT.md  CLAUDE_TEAM.md  CONTRIBUTING.md  DEPLOYMENT_SUCCESS.md  DEVOPS_PROMPTS.md  FINAL_ARCHITECTURE.md  JARVIS_COMMANDER.bat  JARVIS_TURMONT_OPERATIONS.md  LICENSE  MIGRATION_GUIDE.md  MISSION_REPORT.md  PROMPTS_CLAUDE.md  README.en.md  README.md  SECURITY.md  SYSTEM_PROMPT_WINDOWS.md  TODO_CLUSTER.md  _check_api.py  _run_scan.py  add_skills_etoile.py  app_fastapi.py  app_litestar.py  apply_lifespan_patch.py  auto_train.py  benchmark_cluster.py  benchmark_real_test.py  check_cluster.py  check_jarvis.ps1  claude-openai-bridge.js  claude-proxy.js  docker-compose.yml  enroll_emuv_key.sh  etoile.db  (+46 more)
.claude/: settings.json
.claude-plugin/: .mcp.json  plugin.json
.githooks/: post-checkout  post-merge
.github/: dependabot.yml
ansible/: hosts.ini  jarvis-sync.yml
automation/: WORKFLOW_COMPLET_TURBO31150.yml
backups/: .last_backup_ts  IDENTITY_20260305.md  commands.py.pre_hybrid.bak  cowork_agents_20260305_192038.sql  easyspeak_main.py.bak  etoile_cowork_20260305_1947.json  functions_block1.py  functions_block2.py  jarvis_universal_bridge.py.bak  manifest.json  (+4 more)
projects/lienDepart/: main.py  pyproject.toml  python_optimization_guide.py
projects/lienDepart/launchers/: LIEN_DEPART.bat
projects/lienDepart/src/: agents.py  health.py  orchestrator.py  resilience.py
projects/lienDepart/tests/: test_resilience.py
(+2386 files in other folders)
