[project]
name = "turbo"
version = "0.1.0"
description = "JARVIS Orchestrator - Multi-engine AI agent powered by Claude Agent SDK"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.35",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "ccxt>=4.0.0",
    "textual>=1.0.0",
    "pystray>=0.19.0",
    "pillow>=10.0.0",
    "keyboard>=0.13.5",
    "numpy>=2.0.0",
    "sounddevice>=0.5.0",
]

[project.scripts]
turbo = "main:main_sync"
